01-flux/gilfoyle/apps/envoy-gateway/gateway-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gw-external
  namespace: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: gw-external
    namespace: envoy-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-external
  namespace: envoy-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: gw-external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-grafana
      protocol: HTTPS
      port: 443
      hostname: "grafana.themiple.ru"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: grafana-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - grafana
                  - envoy-gateway
    - name: https-immich
      protocol: HTTPS
      port: 443
      hostname: "immich.themiple.ru"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: immich-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - immich
                  - envoy-gateway
    - name: https-pocketid
      protocol: HTTPS
      port: 443
      hostname: "pocketid.themiple.ru"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: pocketid-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - pocketid
                  - envoy-gateway
    - name: https-homebox
      protocol: HTTPS
      port: 443
      hostname: "homebox.themiple.ru"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: homebox-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - homebox
                  - envoy-gateway
